Added Transactional logic to Shipment and Invoice service.
The update method calls create a temporary object and perform operations on it.
Once it is ready, the existing object is overriden with these properties and saves